delete, update image one by one; comment section added

--- a/frontend/static/css/home-page.css
+++ b/frontend/static/css/home-page.css
@@ -334,7 +334,7 @@ textarea:focus-visible {
 }
 
 /* Image Upload Styles */
-#imagePreviewContainer {
+#imagePreviewContainer, #editImagePreviewContainer {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
