--- a/frontend/templates/home-page.html
+++ b/frontend/templates/home-page.html
@@ -1,57 +1,8 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>User Dashboard</title>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-  <div class="loader-container">
-    <div class="loader"></div>
-  </div>
-  
-  <nav class="navbar navbar-expand-lg bg-body-tertiary rounded">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarsExample09">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a href="#" class="nav-link active">Главная</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Контрагенты</a>
-            <ul class="dropdown-menu">
-              <li><a href="#" class="dropdown-item">Покупатели</a></li>
-              <li><a href="#" class="dropdown-item">Поставщики</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Финансы</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Профиль</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Профиль</a></li>
-              <li><a class="dropdown-item" href="#">История</a></li>
-              <li><a class="dropdown-item" href="#">Настройки</a></li>
-              <li><a class="dropdown-item" href="#">Выйти</a></li>
-            </ul>
-          </li>
-        </ul>
-        <a type="button" class="create_supply_button" data-bs-toggle="modal" data-bs-target="#addSupplyModal">Добавить поставку</a>
-      </div>
-    </div>
-  </nav>
-
-  <div class="container-custom">
+{% block content %}
+<div class="container-custom">
     <button type="button" class="btn btn-primary floating-action-button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
       <i class="bi bi-lightning-charge-fill"></i>
     </button>
@@ -221,9 +172,11 @@
   </div>
 </div>
   </div>
+{% endblock content %}
 
-  <script src="{% static 'js/imask.js' %}"></script>
+{% block externals %}
+
   <script src="{% static 'js/home-page.js' %}"></script>
-  <link rel="stylesheet" href="{% static 'css/home-page.css' %}">
-</body>
-</html>
+   <link rel="stylesheet" href="{% static 'css/home-page.css' %}">
+
+{% endblock externals %}
